--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -17,3 +17,11 @@ body {
     padding: 8px 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
+
+.cabecalho__menu i::before {
+    content: "\e904";
+}
+
+.cabecalho__notificacao i::before {
+    content: "\e906";
+}
