--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -20,8 +20,10 @@ body {
 
 .cabecalho__menu i::before {
     content: "\e904";
+    font-size: 24px;
 }
 
 .cabecalho__notificacao i::before {
     content: "\e906";
+    font-size: 24px;
 }
