--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -39,3 +39,9 @@ body {
     width: 75vw;
     height: 100vh;
 }
+
+.menu-lateral__logo {
+    width: 118px;
+    align-self: center;
+    padding: 16px;
+}
