--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -49,4 +49,16 @@ body {
 .menu-lateral__link {
     height: 64px;
     color: #95999C;
+    padding-left: 64px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-lateral__link::before {
+    content: "\e900";
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    position: absolute;
+    left: 24px;
 }
