--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -55,10 +55,34 @@ body {
 }
 
 .menu-lateral__link::before {
-    content: "\e900";
+    content: "";
     width: 24px;
     height: 24px;
     font-size: 24px;
     position: absolute;
     left: 24px;
+}
+
+.menu-lateral__link--inicio::before {
+    content: "\e902";
+}
+
+.menu-lateral__link--videos::before {
+    content: "\e90e";
+}
+
+.menu-lateral__link--picos::before {
+    content: "\e909";
+}
+
+.menu-lateral__link--integrantes::before {
+    content: "\e903";
+}
+
+.menu-lateral__link--camisas::before {
+    content: "\e900";
+}
+
+.menu-lateral__link--pinturas::before {
+    content: "\e90a";
 }
