--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -54,6 +54,12 @@ body {
     align-items: center;
 }
 
+.menu-lateral__link--ativo {
+    color: #FFFFFF;
+    padding-left: 56px;
+    border-left: 8px solid #FFFFFF;
+}
+
 .menu-lateral__link::before {
     content: "";
     width: 24px;
