--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -143,3 +143,8 @@ body {
     content: "\e90c";
     margin-right: 8px;
 }
+
+.cartao__info--visualizacao {
+    content: "\e90f";
+    margin-right: 8px;
+}
