--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -148,3 +148,14 @@ body {
     content: "\e90f";
     margin-right: 8px;
 }
+
+.cartao__botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0480DC;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
