--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -160,7 +160,15 @@ body {
     font-size: 0.9rem;
 }
 
-.cartao__botao--play {
+.cartao__botao--play::before {
     content: "\e90b";
     font-size: 24px;
+}
+
+.cartao__botao--destaque {
+    width: 100%;
+}
+
+.cartao__botao--destaque::before {
+    margin-right: 8px;
 }
