--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -125,6 +125,10 @@ body {
     grid-template-columns: 1fr 1fr;
 }
 
+.cartao__destaque {
+    grid-column: span 2;
+}
+
 .cartao__titulo {
     font-size: 1.2rem;
     font-weight: 700;
