--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -173,6 +173,7 @@ body {
     height: 40px;
     border-radius: 10px;
     font-size: 0.9rem;
+    justify-self: flex-end;
 }
 
 .cartao__botao--play::before {
