--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -114,6 +114,11 @@ body {
     font-weight: 700;
 }
 
+.titulo-secao {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
 .cartao {
     width: 100%;
     border-radius: 15px;
