--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -162,6 +162,13 @@ body {
     content: "\e90a";
 }
 
+@media screen and (min-width: 1440px) {
+    .menu-lateral {
+        position: static;
+        width: 200px;
+    }
+}
+
 .principal {
     padding: 24px 16px;
     display: grid;
