--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -280,6 +280,11 @@ body {
     font-size: 24px;
 }
 
+.cartao__botao--carrinho::before {
+    content: "\e901";
+    font-size: 24px;
+}
+
 .cartao__botao--destaque {
     width: 100%;
     grid-column: span 2;
