Add desafio picos

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -290,6 +290,11 @@ body {
     font-size: 24px;
 }
 
+.cartao__botao--picos::before {
+    content: "\e909";
+    font-size: 24px;
+}
+
 .cartao__botao--destaque {
     width: 100%;
     grid-column: span 2;
